# cppcon2014-hourglass

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  find_includes.sh  main.cpp  notes.md
mylib/: CMakeLists.txt  team.h  team_api.cpp  team_api.h  visibility.h
